--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/maro.png">
+            <img class="avatar" src="images/maro.png" alt="Fernanda Maro">
             <div >
                 <h3>Fernada Maro</h3>
                 <p>Frontend Developer</p>
